@@ -6,17 +6,15 @@ import edu.harvard.hms.dbmi.avillach.auth.repository.TermsOfServiceRepository;
 import edu.harvard.hms.dbmi.avillach.auth.repository.UserRepository;
 import edu.harvard.hms.dbmi.avillach.auth.rest.TermsOfSerivceController;
 import edu.harvard.hms.dbmi.avillach.auth.rest.UserController;
+import jakarta.persistence.NoResultException;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 
-import javax.persistence.NoResultException;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.List;
+import java.util.*;
 
 /**
  * <p>Provides business logic for the TermsOfService endpoint.</p>>
@@ -35,19 +33,19 @@ public class TOSService {
 
     private final UserRepository userRepo;
 
-    private final UserController userController; // TODO: This isn't a service its a controller. Why are we doing this?
+    private final UserController userService; // TODO: This isn't a service its a controller. Why are we doing this?
 
     @Autowired
-    public TOSService(TermsOfServiceRepository termsOfServiceRepo, UserRepository userRepo, UserController userController) {
+    public TOSService(TermsOfServiceRepository termsOfServiceRepo, UserRepository userRepo, UserController userService) {
         this.termsOfServiceRepo = termsOfServiceRepo;
         this.userRepo = userRepo;
-        this.userController = userController;
+        this.userService = userService;
     }
 
 
-    public boolean hasUserAcceptedLatest(String userId){
+    public boolean hasUserAcceptedLatest(String userId) {
         // If TOS is not enabled, then the user has accepted it
-        if (!isToSEnabled){
+        if (!isToSEnabled) {
             return true;
         }
 
@@ -56,37 +54,52 @@ public class TOSService {
             return true;
         }
 
-        logger.info("Checking Terms Of Service acceptance for user with id " + userId);
-        return userRepo.checkAgainstTOSDate(userId);
+        logger.info("Checking Terms Of Service acceptance for user with id {}", userId);
+        return checkAgainstTOSDate(userId);
     }
 
-    public TermsOfService updateTermsOfService(String html){
+    public TermsOfService updateTermsOfService(String html) {
         TermsOfService updatedTOS = new TermsOfService();
         updatedTOS.setContent(html);
-        termsOfServiceRepo.persist(updatedTOS);
-        return termsOfServiceRepo.getLatest();
+        termsOfServiceRepo.save(updatedTOS);
+        return termsOfServiceRepo.findTopByOrderByDateUpdatedDesc();
     }
 
-    public String getLatest(){
+    public String getLatest() {
         try {
-            return termsOfServiceRepo.getLatest().getContent();
-        } catch (NoResultException e){
+            return termsOfServiceRepo.findTopByOrderByDateUpdatedDesc().getContent();
+        } catch (NoResultException e) {
             logger.info("Terms Of Service disabled: No Terms of Service found in database");
             return null;
         }
     }
 
-    public void acceptTermsOfService(String userId){
-        logger.info("User " + userId + " accepting TOS");
+    public void acceptTermsOfService(String userId) {
+        logger.info("User {} accepting TOS", userId);
         User user = userRepo.findBySubject(userId);
-        if (user == null){
+        if (user == null) {
             throw new RuntimeException("User does not exist");
         }
         user.setAcceptedTOS(new Date());
-        List<User> users = Arrays.asList(user);
-        Date tosDate = termsOfServiceRepo.getLatest().getDateUpdated();
-        userController.updateUser(users);
-        logger.info("TOS_LOG : User " + (!StringUtils.isEmpty(user.getEmail()) ? user.getEmail() : user.getGeneralMetadata()) + " accepted the Terms of Service dated " + tosDate.toString());
+        List<User> users = List.of(user);
+        Date tosDate = termsOfServiceRepo.findTopByOrderByDateUpdatedDesc().getDateUpdated();
+        userService.updateUser(users);
+        logger.info("TOS_LOG : User {} accepted the Terms of Service dated {}", !StringUtils.isBlank(user.getEmail()) ? user.getEmail() : user.getGeneralMetadata(), tosDate.toString());
+    }
+
+    private boolean checkAgainstTOSDate(String userId) {
+        Optional<User> optUser = this.userRepo.findById(UUID.fromString(userId));
+        if (optUser.isPresent()) {
+            User user = optUser.get();
+            Date acceptedTOS = user.getAcceptedTOS();
+            if (acceptedTOS == null) {
+                return false;
+            }
+            Date latestTOS = this.termsOfServiceRepo.findTopByOrderByDateUpdatedDesc().getDateUpdated();
+            return acceptedTOS.after(latestTOS);
+        }
+
+        return false;
     }
 
 }
